--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 DIAL_CALL=016
 USER_DIAL=015
-PASSWORD=Password123@@
-FREEPBX_SERVER=116.193.190.97
+PASSWORD=YourPassword
+FREEPBX_SERVER=123.193.120.217
